Changes on some MathUtils methods to be able to operate with combinations of any type of Numbers.